--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlotteries.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlotteries.html
@@ -5,8 +5,8 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
-			<li class="active">微信抽奖</li>
+			<li><a href="/apps/exlottery/exlotteries/">百宝箱</a></li>
+			<li class="active">专项抽奖</li>
 		</ul>
 	</div>
 
@@ -69,8 +69,8 @@
 
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
-			<a href="/apps/lottery/lottery/" class="btn btn-success fr">
-				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建微信抽奖
+			<a href="/apps/exlottery/exlottery/" class="btn btn-success fr">
+				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建专项抽奖
 			</a>
 		</div>
 
