--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_status.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_status.html
@@ -31,6 +31,17 @@
 					<input type="text" class="form-control" id="member" name="member" value="" />
 				</div>
 			</div>
+			<div class="xui-col disTc">
+				<div class="xui-i-item ml20">
+					<label>获奖等级：</label>
+					<select class="" id="status" name="status">
+						<option value="-1">未中奖</option>
+						<option value="0">一等奖</option>
+						<option value="1">二等奖</option>
+						<option value="2">三等奖</option>
+					</select>
+				</div>
+			</div>
 		</div>
 		<div class="xui-btn-group">
 			<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;询</a>
