--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_status.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_status.html
@@ -97,6 +97,7 @@
 			data-selectable="false"
 			data-disable-header-select="true"
 			data-item-count-per-page="10"
+            data-args='{"id": "{{activity_id}}"}'
 		>
 		</div>
 	</div>
