--- a/weapp/mall/templates/mall/editor/sender_info_list.html
+++ b/weapp/mall/templates/mall/editor/sender_info_list.html
@@ -91,7 +91,7 @@ $(document).ready(function() {
     $('body').delegate('.xui-delete-sender', 'click', function (event) {
 
         var id = $(this).attr('data-id');
-        console.log(id);
+//      console.log(id);
         var $el = $(event.currentTarget);
         W.requireConfirm({
             $el: $el,
