--- a/weapp/mall/templates/mall/editor/sender_info.html
+++ b/weapp/mall/templates/mall/editor/sender_info.html
@@ -17,7 +17,7 @@
 
 				<div class="mb10">
 					<label for="" class="star_show">发货人：</label>
-					<input type="text" class="ml10 xa-senderName" name="sender_name"  maxlength="100" value="{{sender_info.sender_name}}" data-validate="required-none"/>
+					<input type="text" class="ml10 xa-senderName" name="sender_name"  maxlength="100" value="{{sender_info.sender_name}}" data-validate="require-notempty"/>
 					<span class="errorHint"></span>
 					
 					
@@ -31,17 +31,19 @@
 			 <select class="xa-city" required>
              	<option value="请选择">请选择市</option>            	
              </select>
-			 <select class="xa-district" required>
+			 <select class="xa-district">
              	<option value="请选择">请选择区/县</option>            	
-             </select><br />
+             </select>
+             <span class="errorHint"></span>
+             <br />
              <input type="hidden" name="area" value="{{sender_info.area}}" />      
 			</div>
 
 				<div>
 					<div class="mb10">
 						<label for="" class="star_show fl">详细信息：</label>
-						<textarea rows="5" cols="50" placeholder="不需要重复填写省/市/区" name="sender_address" required>{{sender_info.sender_address}}</textarea>
-						<div class="errorHint"></div>
+						<textarea rows="5" cols="50" placeholder="不需要重复填写省/市/区" name="sender_address" data-validate="require-notempty">{{sender_info.sender_address}}</textarea>
+						<span class="errorHint"></span>
 					</div>
 				</div><br />
 				<div class="mb10 ">
