--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_status.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_status.html
@@ -106,7 +106,6 @@
 		</div>
 		<div class="disTc">
 			<a href="javascript:void(0)" class="xa-export">导出<span style="font-family:'宋体'">&gt;&gt;</span></a>
-			<a id="export_href" style="display: none ">DownloadXLS</a>
 		</div>
 	</div>
 	{{if items!='' }}
@@ -178,33 +177,14 @@
 		});
 
 		//导出
-		$('.xa-export').click(function(event){
+		$('body').delegate('.xa-export','click',function(event){
 			W.getLoadingView();
-			var name = $.trim($('[name="code"]').val());
-			var status = $.trim($('[name="member"]').val());
+			var code = $.trim($('[name="code"]').val());
+			var member = $.trim($('[name="member"]').val());
+			var status = $('[name="status"]').val();
 			var export_id =window.location.search.split('?id=')[1];
-			W.getApi().call({
-				method: 'get',
-				app: 'apps/exlottery',
-				resource: 'exlottery_status_export',
-				args: {
-					'id': export_id,
-					'member': member,
-					'code': code
-				},
-				success: function(resp){
-					if(resp.code == 200){
-						$('#export_href').prop({
-							'href': resp.download_path,
-							'download': resp.filename
-						}).get(0).click();
-					}
-					console.log("导出成功");
-				},
-				error: function(error){
-					console.log('导出失败');
-				}
-			});
+			var url = '/apps/exlottery/exlottery_status_export/?code='+code+'&status='+status+'&member='+member+'&export_id='+export_id;
+	  		window.open(url);
 		});
 	});
 </script>
