--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_code_store.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_code_store.html
@@ -55,7 +55,7 @@
 			class="panel-body panel-table p0"
 			data-ui-role="advanced-table"
 			data-app="apps/exlottery"
-			data-resource="exlottery_status"
+			data-resource="exlottery_code_store"
 			data-template-id="#table"
 			data-enable-paginator="true"
 			data-enable-sort="false"
@@ -183,7 +183,7 @@
 			var member = $.trim($('[name="member"]').val());
 			var status = $('[name="status"]').val();
 			var export_id =window.location.search.split('?id=')[1];
-			var url = '/apps/exlottery/api/exlottery_status_export/?code='+code+'&status='+status+'&member='+member+'&export_id='+export_id;
+			var url = '/apps/exlottery/api/exlottery_code_export/?code='+code+'&status='+status+'&member='+member+'&export_id='+export_id;
 	  		window.open(url);
 		});
 	});
