--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_participances.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_participances.html
@@ -15,8 +15,8 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
-			<li><a href="/apps/lottery/lotteries/">微信抽奖</a></li>
+			<li><a href="/apps/exlottery/exlotteries/">百宝箱</a></li>
+			<li><a href="/apps/exlottery/exlotteries/">专项抽奖</a></li>
 			<li class="active">查看结果</li>
 		</ul>
 	</div>
@@ -90,8 +90,8 @@
 		<div 
 			class="panel-body panel-table p0 mt10"
 			data-ui-role="advanced-table" 
-			data-app="apps/lottery" 
-			data-resource="lottery_participances" 
+			data-app="apps/exlottery"
+			data-resource="exlottery_participances"
 			data-args='{"id": "{{activity_id}}"}'
 			data-template-id="#table" 
 			data-enable-paginator="true" 
