--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlotteries.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlotteries.html
@@ -118,7 +118,7 @@
 				   <a
 					class="xui-ellipsisFox"
 					limit="15"
-					href="/apps/lottery/lottery/?id=${item.id}&related_page_id=${item.related_page_id}"
+					href="/apps/exlottery/exlottery/?id=${item.id}&related_page_id=${item.related_page_id}"
 					style="text-overflow: -o-ellipsis-lastline;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;"
 					>
 						${item.name}
