--- a/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
@@ -125,7 +125,7 @@
   <script type="text/javascript">
     W.uid = "{{request.manager.id}}";
     W.projectId = "{{project_id}}";
-    W.activityId = "{{lottery.id}}";
+    W.activityId = "{{exlottery.id}}";
     W.host = "{{request.META.HTTP_HOST}}";
     W.API_VERSION = 1;
     var isCreateNewData = {% if is_create_new_data %}true{% else %}false{% endif %};
