--- a/weapp/mall/templates/mall/editor/sender_info_list.html
+++ b/weapp/mall/templates/mall/editor/sender_info_list.html
@@ -86,7 +86,11 @@
                     	
                         <a href="javascript:void(0);" data-id="${sender.id}" class="xui-delete-sender  mr10">删除</a>
                         <a href="/mall2/sender_info/?id=${sender.id}" data-id="${sender.id}" data-name="${sender.name}" class=" mr10">修改</a>
-                        <a href="javascript:void(0);" data-id="${sender.id}" data-name="${sender.name}" class="xui-default-sender ">默认</a>
+                        {{if is_selected == 1}}
+                        <a href="javascript:void(0);" data-id="${sender.id}" status="${sender.is_selected}" data-name="${sender.name}" class="xui-default-sender btn-danger">默认</a>
+                        {{else}}
+                        <a href="javascript:void(0);" data-id="${sender.id}" status="${sender.is_selected}" data-name="${sender.name}" class="xui-default-sender ">默认</a>
+                        {{/if}}
                     </td>
                 </tr>
 			{{/each}}
@@ -135,16 +139,24 @@ $(document).ready(function() {
     //默认信息
     $('body').delegate('.xui-default-sender', 'click', function (event) {
     	
-          var id = $(this).attr('data-id'),
-            
-               args = _.extend(args,{id:id})
+         var $self = $(this),
+         	status = $self.attr('status'),
+         	id     = $self.attr('data-id');
+         	console.log(id+ '---'+ status);
+         	if(status == '1'){
+         		return false;
+         	}
                W.getApi().call({
          　　　　　 method:'post',          
           　　　　　app: 'mall2',
-         　　　　　 resource:'sender_info',
-          　　　　　args:args,
-	      　　　　　success: function(data) {
-						                		  	
+         　　　　　 resource:'sender_info/?id='+id,
+          　　　　　args:{
+          			id:id,
+          			is_selected:status
+          	},
+	      　　　　　success: function(data) {               		  	
+				       $self.addClass("btn-danger");
+				       $self.parents('tr').siblings().find('.xui-default-sender').removeClass('btn-danger')
 				       
 					},
 					error: function(resp) {
