新建专项抽奖活动step

--- a/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
@@ -1,7 +1,7 @@
 ﻿{% load workbench_filter %}
 
 
-{% ifequal component.type 'appkit.lotterydescription' %}
+{% ifequal component.type 'appkit.exlotterydescription' %}
     <div class="wui-surveyDescription wui-lotterydescription">
         <div class="wui-i-roulette wui-i-title">
             <h1 class="wui-i-innerTitle">
